fixing z-index bug

--- a/src/components/nav/hamburger/hamburger.scss
+++ b/src/components/nav/hamburger/hamburger.scss
@@ -67,4 +67,5 @@
     width: 100%;
     backdrop-filter: blur(10px);
     background-color: rgb(0, 0, 0, 0.5);
+    z-index: 6;
 }
